# bookbridge

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  EVIDENCE.md  Procfile  README.md  playwright.config.ts  pyproject.toml  railway.json  vitest.config.ts
.claude/: settings.json
.claude/.agents/: architect.md
.claude/agents/: code-reviewer.md  product-architect.md  rubric-workflow-architect.md  security-reviewer.md  test-writer.md
.claude/commands/: create-pr.md  start-issue.md
.claude/skills/: create-pr.md  start-issue.md  tdd-add-module-v1.md  tdd-add-module.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: feature.md
.github/workflows/: ci.yml  security.yml
bookbridge/: __init__.py  cli.py  config.py
bookbridge-next/: .gitignore  middleware.ts  package-lock.json  package.json  playwright.config.ts  vercel.json  vitest.config.ts  vitest.setup.ts
bookbridge-next/__tests__/: page.test.tsx  (+4 more)
docs/: API_DESIGN.md  HW5_RETROSPECTIVE.md  MCP_DEMO_SESSION.md  MCP_SETUP.md  PRD-zh.md  PRD.md  REFLECTION.md  SESSION_LOG.md  SKILL_ITERATION.md  SKILL_V1_SESSION.md  SKILL_V2_SESSION.md  auto-summary-plan.md  cicd-guide.md  explore_ingestion.md  plan_ingestion.md  report.md  sprint-1-planning.md  sprint-1-retrospective.md  sprint-2-planning.md  sprint-2-retrospective.md  standups.md  workflow-checklist.md
legacy/: TRANSLATION_GUIDE.md  merge.py  split_book.py
tests/: test_chunker.py  test_glossary.py  test_harness.py  test_html_parser.py  test_mcp_glossary.py  test_pdf_reader.py  test_quality.py  test_translate_result.py  test_worker_api.py  test_worker_api_async.py
(+128 files in other folders)
