[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "bookbridge"
version = "0.1.0"
description = "Skill driven book translation system with glossary consistency"
requires-python = ">=3.11"
dependencies = [
    "pdfplumber",
    "typer",
    "rich",
    "jinja2",
    "mcp",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
]

[project.scripts]
bookbridge = "bookbridge.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
