[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bookbridge"
version = "0.1.0"
description = "Skill driven book translation system with glossary consistency"
requires-python = ">=3.11"
dependencies = [
    "pdfplumber",
    "typer",
    "rich",
    "jinja2",
    "mcp",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
    "httpx>=0.27",
]

[project.scripts]
bookbridge = "bookbridge.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["bookbridge*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
